# technical-test

./: .env  .gitignore  README.md  docker-compose.yml  redis.conf  technical-test.md
app/: Dockerfile  __init__.py  config.py  logging.py  logging.yaml  main.py  pyproject.toml
app/features/: schemas.py
app/features/user/: __init__.py  crud.py  exceptions.py  schemas.py
app/features/user/services/: authentication.py
app/features/user_code/: __init__.py  crud.py  exceptions.py  jobs.py  schemas.py  utils.py
app/features/user_code/services/: __init__.py  validation.py
app/routers/: user.py
app/tests/: conftest.py  models.py
app/tests/integration/: test_user.py
app/tests/unit/user/: test_crud.py
app/tests/unit/user/services/: test_authentication.py
app/tests/unit/user_code/: test_crud.py  test_jobs.py  test_utils.py
app/tests/unit/user_code/services/: test_validation.py
app/utils/: security.py
app/utils/db/: connect.py  init.py  init.sql
app/utils/redis/: connect.py  dead_letter.py  worker.py
